# designless-agent

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  VERSION.md  llms.txt
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: build-bridge.yml
agents/: arbiter-agent.md  prism-agent.md  sentinel-agent.md
bridge/: Cargo.toml
bridge/src/: auth.rs  error.rs  main.rs  mcp.rs  paths.rs  proxy.rs
bridge/src/anchored/: ipc.rs  mod.rs
bridge/src/standalone/: browser.rs  listener.rs  mod.rs  oauth.rs  pkce.rs  storage.rs
capsules/: offline-manifest.json
commands/: adopt.md  agent.md  audit.md  build.md  carousel.md  create.md  designless.md  evolve.md  extend.md  poster.md  prove.md  scan.md  sentinel.md  status.md
docs/: capabilities.md  getting-started.md  vocabulary.md
hooks/: canvas-drain-check.mjs  canvas-wake.mjs  hooks.json  inbox-probe.mjs  page-session-drain.mjs  page-session-nudge.mjs  session-start-inbox.mjs
scripts/: connect.sh
skills/orchestrator/: SKILL.md
templates/: sentinel-dashboard.html
