[package]
name = "designless-mcp-bridge"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Designless MCP bridge: stdio MCP server forwarding frames to mcp.designless.app/mcp, anchored to the Designless desktop app (Electron IPC + keychain JWT; the desktop app owns token rotation)."
repository = "https://github.com/designlesshq/designless-agent"
publish = false

[[bin]]
name = "designless-mcp-bridge"
path = "src/main.rs"

[dependencies]
# Async runtime — Phase 2 minimum surface
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-std", "io-util", "fs", "time", "sync", "process"] }

# HTTPS client to mcp.designless.app — rustls to avoid openssl dependency
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# JSON-RPC frame serialization (MCP protocol over stdio)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling — thiserror for typed errors at module boundaries, anyhow for error contexts at process boundary
anyhow = "1"
thiserror = "1"

# Logging — stderr only; stdout is reserved exclusively for MCP frames per protocol
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Cross-platform user directory lookup (~/.designless, $TMPDIR, etc.)
dirs = "5"

# NOTE: Anchored mode reads tokens via IPC to the Electron desktop app, NOT
# via direct keychain access. This is intentional: the Electron app is signed
# with Developer ID and has standing keychain trust; routing keychain reads
# through it means the unsigned-during-dev bridge never triggers a keychain
# permission prompt. The `keyring` crate is therefore not a dependency.

# JWT decoding — bridge inspects `exp` claim to decide refresh timing (no verification needed; server is the trust boundary)
jsonwebtoken = "9"

# URL parsing for outbound MCP endpoint construction
url = "2"

# async-trait shim — required for `dyn AuthProvider` with async methods on stable Rust.
# (Native async fn in traits is stable but doesn't yet support dyn-compatible trait objects
# for our use case without this crate.)
async-trait = "0.1"

# ── Standalone-mode OAuth (Phase 3) ──

# tiny_http — sync HTTP server for the loopback OAuth callback. Single-request
# lifetime; spawned on a blocking thread via tokio::task::spawn_blocking.
tiny_http = "0.12"

# SHA-256 for PKCE S256 code_challenge derivation
sha2 = "0.10"

# Base64 URL-safe encoding for PKCE verifier + challenge
base64 = "0.22"

# CSPRNG for PKCE verifier + state parameter
rand = "0.8"

# Date/time for token expiry tracking (`expires_at` ISO8601, refresh leeway).
# default-features = false drops `oldtime` (avoids the older time crate).
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

[profile.release]
opt-level = "z"      # Optimize for size (security-sensitive single-purpose binary)
lto = true           # Link-time optimization
codegen-units = 1
panic = "abort"      # Smaller binary; bridge has no panic-recovery story
strip = "symbols"
